# Niezapominajka

./: .gitignore  MANIFEST.in  pyproject.toml
src/: args.py  cli.py  constants.py  gui.py  main.py  review.py  signals.py
src/niezapominajka/: __main__.py  cli.py  constants.py  gui.py  review.py
tests/test_data/: Brasil.b
