[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Niezapominajka"
version = "0.0.1"
description = "Simple flashcard app"

requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
niezapominajka = "main:main"
