[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Niezapominajka"
version = "0.0.1"
description = "Simple flashcard app"

requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "PyQt6"
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
niezapominajka = "niezapominajka.__main__:run_cli"
niezapominajqt = "niezapominajka.__main__:run_gui"
