[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "niezapominajka"
version = "0.0.2"
description = "Simple flashcard app"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
niezapominajka = "niezapominajka.__main__:main"
